Реальзовать API Public: События Провести декомпозицию кода EventServiceImpl.class